# get-papers-list

./: .gitignore  README.md  cli.py  genentech_papers.csv  local_test_moderna.csv  pfizer_results.csv  pyproject.toml  results.csv  roche_papers.csv
papers_fetcher/: api.py  heuristics.py  models.py  parser.py
